# servicenow_mcp_server

./: .env.example  .gitignore  CLAUDE_USAGE_INSTRUCTIONS.md  DEPLOYMENT.md  LLM_INTEGRATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.env  README.md  SERVICENOW_ROLES.md  TESTING.md  TESTING_GUIDE.md  TITLE_SEARCH_TROUBLESHOOTING.md  claude_desktop_config.json  claude_desktop_config.json.template  get_current_token.py  pyproject.toml  requirements.txt  start_mcp_server_with_env.sh  start_mcp_server_with_env.sh.template  test_mcp_integration.py  test_ollama_integration.py
servicenow_mcp_server/: __init__.py  auth.py  config.py  knowledge_synthesis.py  main.py  server.py  servicenow_client.py  types.py  utils.py
tests/: __init__.py  conftest.py
tests/unit/: test_knowledge_synthesis.py  test_search_functionality.py
